--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
-    "deploy": "next build && next export && gh-pages -d out",
+"deploy": "next build && next export && mkdir -p out/Masarat-Events && mv out/* out/Masarat-Events/ && gh-pages -d out",
     "start": "next start",
     "lint": "next lint"
   },
